# notecli

./: Cargo.toml  README.md
src/: lib.rs  main.rs  note_manager.rs
src/cli/: cli.rs  mod.rs
src/cli/command/: command.rs  completion.rs  create.rs  delete.rs  edit.rs  list.rs  mod.rs  search.rs  show.rs
src/cli/command/completion/: bash.rs  command.rs  fish.rs  mod.rs  zsh.rs
tests/: cli.rs  completion.rs  create.rs  delete.rs  edit.rs  list.rs  notecli.rs  sanity.rs  show.rs
tests/cli/: mod.rs
