[package]
name = "notecli"
description = "Small fast and easy to use utility to manage personal notes from command line"
version = "0.1.0"
authors = ["Konstantin Labun <konstantin.labun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "3.0.0-beta.2", features = ["derive", "suggestions", "color"] }
clap_generate = "3.0.0-beta.2"
dirs = "3.0.1"
walkdir = "2.3.1"

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.1.0"
predicates = "1.0.5"
regex = "1.4.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
